# globals_struct

./: Cargo.toml
src/: lib.rs
